test/SemanticAnalysis/CapabilityTest/InferTemplateVarMethodSetIncorrectReturnType.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

interface Requirements {
	int methodA();
}

template <typename T>
class TestClass() {
	void methodA() require(T : Requirements) { }
}

// The intention here is to confuse the compiler into
// assuming T has method 'methodA', even though the
// predicate 'TestClass<T> : Requirements' is actually
// always false and hence no information can be obtained
// from it about what methods T supports.
template <typename T>
int function(T& object) require(TestClass<T> : Requirements) {
	// CHECK: .loci:22:9: error: template arguments do not satisfy require predicate 'TestClass<T> : Requirements' of method 'methodA'
	// CHECK: .loci:22:9: note: because: return type in method 'methoda' has type void_t in source but type int_t in requirement
	return object.methodA();
}

// CHECK: 1 error generated.
